// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`check-strictly.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input"
    >
      <div
        class="t-input__wrap"
        value="1 / 1.2 / 1.2.2"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="1 / 1.2 / 1.2.2"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              1/1.1/1.1.2/1.1.2.1
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              2
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`collapsed.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一/子选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              +2
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一/子选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              style="color: rgb(0, 168, 112);"
            >
              +2
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input"
    >
      <div
        class="t-input__wrap"
        value="选项一 / 子选项一"
      >
        <div
          class="t-input t-is-readonly t-is-disabled t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            disabled=""
            placeholder="请选择"
            readonly=""
            type="text"
            value="选项一 / 子选项一"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon t-is-disabled"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-is-disabled t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square t-tag--disabled"
            >
              选项一/子选项一
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon t-is-disabled"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ellipsis.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`filterable.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              当选项一数据展示文本过长时/子选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <input
            class="t-input__inner"
            placeholder=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keys.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`load.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`max.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一/子选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`panel.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      style="border: 1px solid #eee; width: 100%;"
    >
      <div
        class="t-cascader__panel t-cascader--normal"
      >
        <ul
          class="t-cascader__menu narrow-scrollbar"
        >
          <li
            class="t-cascader__item t-size-m t-cascader__item--with-icon"
          >
            <span
              class="t-cascader__item-label t-cascader__item-label--ellipsis"
              role="label"
              title="选项一"
            >
              选项一
            </span>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__item-icon t-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </li>
          <li
            class="t-cascader__item t-size-m t-cascader__item--with-icon"
          >
            <span
              class="t-cascader__item-label t-cascader__item-label--ellipsis"
              role="label"
              title="选项二"
            >
              选项二
            </span>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__item-icon t-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </li>
        </ul>
      </div>
    </div>
    <div
      style="border: 1px solid #eee; width: 100%;"
    >
      <div
        class="t-cascader__panel t-cascader--normal"
      >
        <ul
          class="t-cascader__menu narrow-scrollbar"
        >
          <li
            class="t-cascader__item t-size-m t-cascader__item--with-icon"
          >
            <label
              class="t-checkbox"
              title="选项一"
            >
              <input
                class="t-checkbox__former"
                name="1"
                type="checkbox"
                value=""
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                选项一
              </span>
            </label>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__item-icon t-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </li>
          <li
            class="t-cascader__item t-size-m t-cascader__item--with-icon"
          >
            <label
              class="t-checkbox"
              title="选项二"
            >
              <input
                class="t-checkbox__former"
                name="2"
                type="checkbox"
                value=""
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                选项二
              </span>
            </label>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__item-icon t-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`show-all-levels.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
      style="margin-top: 16px;"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-s t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
      style="margin-top: 16px;"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
      style="margin-top: 16px;"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-l t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`trigger.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value-mode.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple t-select-input--empty"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__input-pre"
          >
            请选择
          </span>
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value-type.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-row"
  >
    ["1","1.1"]
    <div
      class="t-popup__reference t-cascader t-select-input"
    >
      <div
        class="t-input__wrap"
        value="选项一 / 子选项一"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请选择"
            readonly=""
            type="text"
            value="选项一 / 子选项一"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    [["1","1.1"],["1","1.2"]]
    <div
      class="t-popup__reference t-cascader t-select-input t-select-input--multiple"
    >
      <div
        class="t-input__wrap t-tag-input t-tag-input--break-line t-tag-input__with-suffix-icon"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一/子选项一
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              选项一/子选项二
              <svg
                class="t-icon t-icon-close t-tag__icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__input-pre"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-fake-arrow t-cascader__icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
